# offbin

./: Cargo.toml  README.md  generated.rs
assets/: Makefile  Makefile.toml  Rakefile  cargo.toml  hello.toml  offbin.toml  package.json
examples/: clap.rs  generated.rs  hello_world.rs  run_command.rs
src/: cargo_gen.rs  cli.rs  codegen.rs  config.rs  custom_config.rs  file_packer.rs  lib.rs  rust_print.rs  tool_selector.rs
