[package]
name = "offbin"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
toml = "0.4"
serde_derive = "1.0"
serde = "1.0"
indexmap = "1.0.2"
rust_info = "0.2.1"
walkdir = "2.2.7"
#cargo-make = { git = "https://github.com/offscale/cargo-make.git", branch = "offbin" }
cargo-make = { git = "https://github.com/offscale/cargo-make", branch = "shebang-runner" }
